--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 3rd, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 4th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/cats-vs-dogs.jpeg"
-                            alt="painter fox"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
-                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                        <li><span class="type">Exercise</span>Container and Selectors Drills</li>
                     </ul>
                 </div>
 
@@ -34,24 +33,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements Review</li>
-                            <li><span class="type">PowerPoint</span>Box Model</li>
+                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                            <li><span class="type">Demo</span>Combining CSS Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model</li>
-                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English</li>
+                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
-                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">PowerPoint</span>Responsiveness - Part 1</li>
+                            <li><span class="type">Demo</span>Absolute vs Relative Units</li>
                         </ul>
                     </div>
                 </div>
