--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,22 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 4th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 8th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Would you prefer a staycation? or a destination vacation?</li>
+                        <li>What is your favorite ice cream flavor? Any toppings?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/island-vacation.jpg"
-                            alt="cat on an island"
+                            src="images/icecream-cats.jpg"
+                            alt="lazy sundae"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                        <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                        <li><span class="type">Project</span>Generic License</li>
                     </ul>
                 </div>
 
@@ -33,24 +32,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">Demo</span>Combining CSS Selectors</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors</li>
+                            <li><span class="type">Project</span>Generic License</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English</li>
-                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                            <li><span class="type">Project</span>Generic License (cont.)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsiveness - Part 1</li>
-                            <li><span class="type">Demo</span>Absolute vs Relative Units</li>
+                            <li><span class="type">Project</span>Generic License (cont.)</li>
                         </ul>
                     </div>
                 </div>
