--- a/cookbook/appetizers/utilizing-google-fonts.html
+++ b/cookbook/appetizers/utilizing-google-fonts.html
@@ -349,7 +349,15 @@
                             <p>
                                 Select and copy the code in between the 
                                 &lt;style&gt; tags, and paste that at the top 
-                                of our CSS file.
+                                of our CSS file, 
+                                <span style="background-color: yellow;">
+                                    AND ADD A SEMI-COLON AT THE END!!!
+                                </span>
+                            </p>
+                            <p class="indent">
+                                You NEED to add that semi-colon at the end; 
+                                otherwise, it won't work at all, and will break
+                                other parts of your CSS!
                             </p>
                             <p>
                                 That @import code snippet will download the font 
@@ -364,7 +372,8 @@
                             />
                             <figcaption>
                                 Selecting the correct line of code between the
-                                &lt;style&gt; tags.
+                                &lt;style&gt; tags. (Don't forget to add a 
+                                semi-colon at the end!!!)
                             </figcaption>
                         </div>
                     </div>
