--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -12,17 +12,21 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite ice cream flavor? Any toppings?</li>
+                        <li>
+                            If you were throwing a dinner party, and could 
+                            invite anyone (real or fictional), who would you 
+                            invite?
+                        </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/lab-experiment.webp"
+                            alt="lab in lab"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Generic License</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -32,22 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors</li>
-                            <li><span class="type">Project</span>Generic License</li>
+                            <li><span class="type">Lab Time</span>Generic License</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Generic License (cont.)</li>
+                            <li><span class="type">Lab Time</span>Generic License | Extra Credit</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Generic License (cont.)</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
