--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -12,21 +12,18 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            If you were throwing a dinner party, and could 
-                            invite anyone (real or fictional), who would you 
-                            invite?
-                        </li>
+                        <li>What is a hobby you do in your free time?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-experiment.webp"
+                            src="images/cosplay.jpeg"
                             alt="lab in lab"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                        <li><span class="type">Exercise</span>Product Showcase Site</li>
                     </ul>
                 </div>
 
@@ -36,21 +33,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Generic License</li>
+                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Generic License | Extra Credit</li>
+                            <li><span class="type">Demo</span>Single Column Layouts</li>
+                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
                         </ul>
                     </div>
                 </div>
