--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -22,6 +22,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
                         <li><span class="type">Exercise</span>Blog with Sidebar</li>
                     </ul>
                 </div>
