--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,22 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 15th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 16th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite 
-                            "modern" Disney/Pixar movies?</li>
+                        <li>What is one of your favorite DreamWorks movies?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/inside-out.jpg"
-                            alt="feelings"
+                            src="images/httyd.jpg"
+                            alt="how to train your dragon"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>CSS Grid Drills</li>
-                        <li><span class="type">Exercise</span>MeTube</li>
+                        <li><span class="type">Project</span>"mebay" Product Page</li>
                     </ul>
                 </div>
 
@@ -34,21 +32,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>CSS Grid Drills</li>
+                            <li><span class="type">Kahoot</span>Basic Flexbox Review</li>
+                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Two Column Layouts (Mixed)</li>
+                            <li><span class="type">Project</span>"mebay" Product Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>MeTube</li>
+                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
                         </ul>
                     </div>
                 </div>
