--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,22 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 16th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 17th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is one of your favorite DreamWorks movies?</li>
+                        <li>
+                            What is your favorite Marvel movie/series? 
+                            (if you have one)
+                        </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/httyd.jpg"
-                            alt="how to train your dragon"
+                            src="images/avengers.jpeg"
+                            alt="avengers"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>"mebay" Product Page</li>
+                        <li>N/A</li>
                     </ul>
                 </div>
 
@@ -32,22 +35,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Basic Flexbox Review</li>
-                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
+                            <li><span class="type">Lab Time</span>Page Layout Exercises/Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page</li>
+                            <li><span class="type">Lab Time</span>Extra Credit</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>"mebay" Product Page [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
