--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,24 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 17th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 18th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            What is your favorite Marvel movie/series? 
-                            (if you have one)
-                        </li>
+                        <li>Who is your favorite supervillain? (if you have one)</li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/avengers.jpeg"
-                            alt="avengers"
+                            src="images/venom.jpeg"
+                            alt="venom"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li>N/A</li>
+                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                        <li><span class="type">Exercise</span>Trek Cards</li>
+                        <li><span class="type">Exercise</span>Animagram Cards (?)</li>
                     </ul>
                 </div>
 
@@ -35,21 +34,23 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Page Layout Exercises/Project</li>
+                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
+                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit</li>
+                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients (cont.)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li><span class="type">Exercise</span>Animagram Cards</li>
                         </ul>
                     </div>
                 </div>
