--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -12,7 +12,7 @@
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain? (if you have one)</li>
+                        <li>Who is your favorite supervillain?</li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
