--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 18th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 22nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain?</li>
+                        <li>
+                            If you could create your own ice cream flavor,
+                            what would you put in it, and what would you name it?
+                        </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/venom.jpeg"
-                            alt="venom"
+                            src="images/icecream-cats.jpg"
+                            alt="ice cream"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards (?)</li>
+                        <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -34,23 +36,33 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
+                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients (cont.)</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#three-cards">
+                                    Content Layout - Three Cards
+                                </a>
+                            </li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#media-and-text">
+                                    Content Layout - Media & Text
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                 </div>
