--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 22nd, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 23rd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could create your own ice cream flavor,
-                            what would you put in it, and what would you name it?
+                            Would you rather have a pause or 
+                            rewind button in your life?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="ice cream"
+                            src="images/rewind.png"
+                            alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
-                        <li><span class="type">Exercise</span>Pokemon Cards</li>
+                        <li><span class="type">Exercise</span>Three Heroes</li>
                     </ul>
                 </div>
 
@@ -36,8 +35,13 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
-                            <li><span class="type">Exercise</span>Pokemon Cards</li>
+                            <li><span class="type">PowerPoint</span>Hero Content Layouts</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
+                                    Heroes
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
@@ -46,23 +50,18 @@
                         <ul>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#three-cards">
-                                    Content Layout - Three Cards
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
+                                    Heroes [cont.]
                                 </a>
                             </li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/recipes.html#media-and-text">
-                                    Content Layout - Media & Text
-                                </a>
-                            </li>
+                            <li><span class="type">Exercise</span>Three Heroes</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Pokemon Cards</li>
+                            <li><span class="type">Exercise</span>Three Heroes [cont.]</li>
                         </ul>
                     </div>
                 </div>
