--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,39 +7,39 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 23rd, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 24th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a pause or 
-                            rewind button in your life?
+                            Would you rather watch <b>only scary movies</b> or 
+                            <b>only rom-coms</b> for the rest of your life?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/rewind.png"
+                            src="images/anti-love.jpg"
                             alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Three Heroes</li>
+                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
-                        <h3>Introductions (6pm-6:10pm)</h3>
+                        <h3>Announcements (6pm-6:10pm)</h3>
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Hero Content Layouts</li>
+                            <li><span class="type">PowerPoint</span>Gallery Content Layouts</li>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
-                                    Heroes
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
+                                    Galleries
                                 </a>
                             </li>
                         </ul>
@@ -50,18 +50,18 @@
                         <ul>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#heroes">
-                                    Heroes [cont.]
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
+                                    Galleries [cont.]
                                 </a>
                             </li>
-                            <li><span class="type">Exercise</span>Three Heroes</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Three Heroes [cont.]</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
                         </ul>
                     </div>
                 </div>
