--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -38,7 +38,7 @@
                         </h2>
                         <div class="dropdown-items">
                             <h2><a href="seasonings.html">Properties</a></h2>
-                            <h2><a href="seasonings-cheatsheet.html" class="selected">Cheatsheet</a></h2>
+                            <h2><a href="seasonings-cheatsheet.html">Cheatsheet</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -53,6 +53,7 @@
                             <h2><a href="recipes.html?category=content-layout">Content Layouts</a></h2>
                             <h2><a href="recipes.html?category=navigation-layout">Navigation</a></h2>
                             <h2><a href="recipes.html?category=miscellaneous">Miscellaneous</a></h2>
+                            <h2><a href="recipes-cheatsheet.html" class="selected">Cheatsheet</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
@@ -74,11 +75,14 @@
         
         <header id="title" class="">
             <h1>Layout Cheatsheet</h1>
-            <h3>An Refresher of Layout Implementation</h3>
+            <h3>An Refresher of Layout Implementations</h3>
         </header>
         
         <div class="cookbookPage">
-            <h2>Side by Side Options</h2>
+            <h2>Legend</h2>
+            <div class="legend container">Container</div>
+            <div class="legend item">Item</div>
+            <h2>Side by Side Layout Options</h2>
             <h4>Inline-Block</h4>
             <div>
                 <div class="item inline-block">
@@ -182,7 +186,7 @@
                 </div>
             </div>
 
-            <h2>Single Column Centered</h2>
+            <h2>Single Column Centered Layout Options</h2>
             <h4>Margin Auto</h4>
             <div class="container">
                 <div class="item column-centered">
