--- a/cookbook/more.html
+++ b/cookbook/more.html
@@ -53,6 +53,7 @@
                             <h2><a href="recipes.html?category=content-layout">Content Layouts</a></h2>
                             <h2><a href="recipes.html?category=navigation-layout">Navigation</a></h2>
                             <h2><a href="recipes.html?category=miscellaneous">Miscellaneous</a></h2>
+                            <h2><a href="recipes-cheatsheet.html">Cheatsheet</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
