--- a/cookbook/recipes.html
+++ b/cookbook/recipes.html
@@ -51,6 +51,7 @@
                             <h2><a href="recipes.html?category=content-layout" id="content-layout">Content Layouts</a></h2>
                             <h2><a href="recipes.html?category=navigation-layout" id="navigation-layout">Navigation</a></h2>
                             <h2><a href="recipes.html?category=miscellaneous" id="miscellaneous">Miscellaneous</a></h2>
+                            <h2><a href="recipes-cheatsheet.html">Cheatsheet</a></h2>
                         </div>
                     </div>
                     <div class="dropdown-menu">
