--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 24th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 25th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather watch <b>only scary movies</b> or 
-                            <b>only rom-coms</b> for the rest of your life?
+                            Do you have a favorite obscure movie/series/game 
+                            that no one else seems to know about?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/anti-love.jpg"
+                            src="images/shooting-star.jpg"
                             alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                        <li><span class="type">Project</span>Personal Portfolio Site</li>
                     </ul>
                 </div>
 
@@ -35,33 +35,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Gallery Content Layouts</li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
-                                    Galleries
-                                </a>
-                            </li>
+                            <li><span class="type">Demo</span>Google Fonts Refresher</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#galleries">
-                                    Galleries [cont.]
-                                </a>
-                            </li>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
