--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 25th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 26th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            Do you have a favorite obscure movie/series/game 
-                            that no one else seems to know about?
-                        </li>
+                        Would you rather be able to:
+                        <ul>
+                            <li>&bull; eat anything you want in one meal a day for perfect nutrition?</li>
+                            <li>&bull; sleep for 1 hour and be perfectly rested?
+                        </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/shooting-star.jpg"
-                            alt="shooting star"
+                            src="images/power-nap.jpeg"
+                            alt="power nap"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Portfolio Site</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -35,22 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Google Fonts Refresher</li>
-                            <li><span class="type">Project</span>Personal Portfolio Site</li>
+                            <li><span class="type">Lab Time</span>Previous Projects</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - Product Comparison Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
