--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -36,7 +36,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Previous Projects</li>
+                            <li><span class="type">Lab Time</span>Previous Projects/Assignments</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
