--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -36,6 +36,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
+                            <li><span class="type">Showcase</span>Portfolio Projects</li>
                             <li><span class="type">Lab Time</span>Previous Projects/Assignments</li>
                         </ul>
                     </div>
