--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for April 29th, 2024</h1>
+            <h1>GDWD 105 - Agenda for April 30th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         Would you rather:
-                        <ul>
-                            <li>- spend a week unable to go <b>outside</b> your home?</li>
-                            <li>- spend a week unable to go <b>inside</b> your home?
-                        </ul>
+                            <ul>
+                                <li>- get an extra hour in every day, or</li>
+                                <li>- get an extra day every 24 days?</li>
+                            </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/great-indoors.webp"
-                            alt="the great indoors"
+                            src="images/melty-time.webp"
+                            alt="melty time"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Content Layouts</li>
-                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                         <li><span class="type">Exercise</span>Client Navbars</li>
+                        <li><span class="type">Exercise</span>Media Queries</li>
                     </ul>
                 </div>
 
@@ -38,17 +37,19 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Content Layouts</li>
-                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            
+                            <li><span class="type">Exercise</span>Client Navbars</li>
+                            <li><span class="type">PowerPoint</span>Responsive Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
+                            
+                            <li><span class="type">PowerPoint</span>Media Queries</li>
                             <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic">Navbars - Basic</a>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3">Media Queries and Responsiveness</a>
                             </li>
                         </ul>
                     </div>
@@ -56,7 +57,10 @@
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Client Navbars</li>
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3">Media Queries and Responsiveness [cont.]</a>
+                            </li>
+                            <li><span class="type">Exercise</span>Media Queries</li>
                         </ul>
                     </div>
                 </div>
