--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 1st, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 2nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power of flight
+                            or the power to levitate objects?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/alt-animal-names.webp"
-                            alt="true names"
+                            src="images/broom-cats.jpg"
+                            alt="broom cats"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                        <li><span class="type">Exercise</span>Hover Galleries</li>
                     </ul>
                 </div>
 
@@ -35,21 +35,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li><span class="type">Exercise</span>Hover Galleries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
