--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 2nd, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 3rd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have the power of flight
-                            or the power to levitate objects?
+                            Would you rather have: a bag that could hold anything, or
+                            your own pocket-dimension accessed via suitcase?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/broom-cats.jpg"
-                            alt="broom cats"
+                            src="images/hoarder-fox.webp"
+                            alt="hoarder fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Hover Galleries</li>
+                        <li><span class="type">Project</span>Dropdown Menu Site</li>
                     </ul>
                 </div>
 
@@ -35,14 +35,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Hiding and Showing Content</li>
+                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav">
+                                    Dropdown Menus
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Hover Galleries</li>
+                            <li><span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav">
+                                    Dropdown Menus [cont.]
+                                </a>
+                            </li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
