--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -34,7 +34,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Past Exercises or Projects</li>
+                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
