--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -13,18 +13,18 @@
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is your favorite Star Wars movie?
+                            Would you rather be very smart or very strong?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/impressive.webp"
-                            alt="lab fox"
+                            src="images/buns-of-steel.webp"
+                            alt="buns of steel"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                     </ul>
                 </div>
 
@@ -34,21 +34,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
+                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
